--- a/app/src/main/res/drawable/edittext.xml
+++ b/app/src/main/res/drawable/edittext.xml
@@ -3,8 +3,8 @@
     <corners
         android:radius="@dimen/_10sdp"/>
     <solid
-        android:color="@color/white" />
+        android:color="#F9F9FE" />
     <stroke
-        android:color="#F4F4F4"
+        android:color="#000000"
         android:width="@dimen/_1sdp"/>
 </shape>
