--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/BackgroundColor"
     tools:context=".ChangePassword">
 
     <TextView
@@ -15,7 +16,7 @@
         android:layout_marginTop="@dimen/_60sdp"
         android:textStyle="bold"
         android:fontFamily="@font/orbitron"
-        android:textColor="#000000"
+        android:textColor="@color/HeadingTextColor"
         android:textSize="@dimen/_20ssp"
         android:letterSpacing=".1"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,9 +31,9 @@
         android:layout_marginTop="@dimen/_30sdp"
         android:inputType="textPassword"
         android:hint="Old Password"
-        android:textColor="#000000"
+        android:textColor="@color/ParagraphTextColor"
         android:fontFamily="@font/zenantique"
-        android:textColorHint="#000000"
+        android:textColorHint="@color/SecondaryTextColor"
         android:paddingStart="@dimen/_10sdp"
         android:autofillHints="password"
         android:background="@drawable/edittext"
@@ -48,9 +49,9 @@
         android:layout_marginTop="@dimen/_10sdp"
         android:hint="New Password"
         android:background="@drawable/edittext"
-        android:textColorHint="@color/black"
+        android:textColorHint="@color/ParagraphTextColor"
         android:paddingStart="@dimen/_10sdp"
-        android:textColor="@color/textColor"
+        android:textColor="@color/SecondaryTextColor"
         android:fontFamily="@font/zenantique"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
@@ -65,9 +66,9 @@
         android:layout_marginTop="@dimen/_10sdp"
         android:hint="Confirm Password"
         android:background="@drawable/edittext"
-        android:textColorHint="@color/black"
+        android:textColorHint="@color/SecondaryTextColor"
         android:paddingStart="@dimen/_10sdp"
-        android:textColor="@color/textColor"
+        android:textColor="@color/ParagraphTextColor"
         android:fontFamily="@font/zenantique"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="@+id/editTextNewPassword"
@@ -83,7 +84,7 @@
         android:textStyle="bold"
         android:fontFamily="@font/zenantique"
         android:textColor="@color/white"
-        android:background="@drawable/proceed"
+        android:background="@drawable/nextbutton"
         android:letterSpacing=".1"
         android:textSize="@dimen/_14sdp"
         android:textAllCaps="false"
