--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/BackgroundColor"
     tools:context=".EditProfile">
 
     <TextView
@@ -14,7 +15,7 @@
         android:layout_marginTop="@dimen/_20sdp"
         android:textSize="@dimen/_26ssp"
         android:textStyle="bold"
-        android:textColor="@color/textColor"
+        android:textColor="@color/HeadingTextColor"
         android:fontFamily="@font/zenantique"
         android:letterSpacing=".15"
         android:text="Edit Profile"
@@ -38,7 +39,7 @@
         android:layout_width="@dimen/_150sdp"
         android:layout_height="@dimen/_30sdp"
         android:layout_marginTop="@dimen/_5sdp"
-        android:background="@drawable/proceed"
+        android:background="@drawable/nextbutton"
         android:textColor="@color/white"
         android:fontFamily="@font/zenantique"
         android:textAllCaps="false"
@@ -58,10 +59,10 @@
         android:ems="10"
         android:background="@drawable/edittext"
         android:inputType="text"
-        android:textColor="@color/textColor"
+        android:textColor="@color/ParagraphTextColor"
         android:text="Full Name"
         android:fontFamily="@font/zenantique"
-        android:textColorHint="@color/black"
+        android:textColorHint="@color/SecondaryTextColor"
         android:paddingStart="@dimen/_10sdp"
         app:layout_constraintEnd_toEndOf="@+id/buttonChangeProfileImage"
         app:layout_constraintStart_toStartOf="@+id/buttonChangeProfileImage"
@@ -74,8 +75,8 @@
         android:ems="10"
         android:background="@drawable/edittext"
         android:hint="E-mail"
-        android:textColor="@color/textColor"
-        android:textColorHint="@color/black"
+        android:textColor="@color/ParagraphTextColor"
+        android:textColorHint="@color/SecondaryTextColor"
         android:paddingStart="@dimen/_10sdp"
         android:fontFamily="@font/zenantique"
         android:layout_marginTop="@dimen/_10sdp"
@@ -91,8 +92,8 @@
         android:ems="10"
         android:background="@drawable/edittext"
         android:hint="Phone"
-        android:textColor="@color/textColor"
-        android:textColorHint="@color/black"
+        android:textColor="@color/ParagraphTextColor"
+        android:textColorHint="@color/SecondaryTextColor"
         android:paddingStart="@dimen/_10sdp"
         android:fontFamily="@font/zenantique"
         android:layout_marginTop="@dimen/_10sdp"
@@ -108,8 +109,8 @@
         android:background="@drawable/edittext"
         android:ems="10"
         android:hint="Address"
-        android:textColor="@color/textColor"
-        android:textColorHint="@color/black"
+        android:textColor="@color/ParagraphTextColor"
+        android:textColorHint="@color/SecondaryTextColor"
         android:paddingStart="@dimen/_10sdp"
         android:fontFamily="@font/zenantique"
         android:layout_marginTop="@dimen/_10sdp"
@@ -130,7 +131,7 @@
         android:letterSpacing=".1"
         android:textAllCaps="false"
         android:text="Save Changes"
-        android:background="@drawable/proceed"
+        android:background="@drawable/nextbutton"
         app:layout_constraintEnd_toEndOf="@+id/editTextAddress"
         app:layout_constraintStart_toStartOf="@+id/editTextAddress"
         app:layout_constraintTop_toBottomOf="@+id/editTextAddress" />
