--- a/app/src/main/res/layout/activity_food_description.xml
+++ b/app/src/main/res/layout/activity_food_description.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/BackgroundColor"
     tools:context=".FoodDescriptionActivity">
 
     <TextView
@@ -15,7 +16,7 @@
         android:fontFamily="@font/orbitron"
         android:letterSpacing=".1"
         android:text="Food Name"
-        android:textColor="@color/textColor"
+        android:textColor="@color/HeadingTextColor"
         android:textSize="@dimen/_20ssp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -50,7 +51,7 @@
         android:fontFamily="@font/zenantique"
         android:letterSpacing=".1"
         android:text="Description"
-        android:textColor="@color/textColor"
+        android:textColor="@color/SubHeadingTextColor"
         android:textSize="@dimen/_16ssp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -67,7 +68,7 @@
         android:textAlignment="center"
         android:layout_marginStart="@dimen/_20sdp"
         android:layout_marginEnd="@dimen/_20sdp"
-        android:textColor="@color/textColor"
+        android:textColor="@color/ParagraphTextColor"
         android:textSize="@dimen/_14ssp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -78,7 +79,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Ingredients"
-        android:textColor="@color/textColor"
+        android:textColor="@color/ParagraphTextColor"
         android:textStyle="bold"
         android:fontFamily="@font/zenantique"
         android:textSize="@dimen/_16ssp"
@@ -94,7 +95,7 @@
         android:layout_marginTop="@dimen/_5sdp"
         android:layout_marginStart="@dimen/_15sdp"
         android:textSize="@dimen/_14ssp"
-        android:textColor="@color/textColor"
+        android:textColor="@color/ParagraphTextColor"
         android:fontFamily="@font/zenantique"
         android:text="TextView \nTextView \nTextView"
         app:layout_constraintStart_toStartOf="parent"
@@ -102,7 +103,7 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonAddToCart"
-        android:background="@drawable/proceed"
+        android:background="@drawable/nextbutton"
         android:layout_width="@dimen/_230sdp"
         android:layout_height="@dimen/_40sdp"
         android:text="Add to Cart"
