--- a/app/src/main/res/layout/activity_login_home.xml
+++ b/app/src/main/res/layout/activity_login_home.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/BackgroundColor"
     tools:context=".loginHome">
 
     <ImageView
@@ -25,7 +26,7 @@
         android:fontFamily="@font/orbitron"
         android:letterSpacing=".1"
         android:text="@string/app_name"
-        android:textColor="@color/black"
+        android:textColor="@color/PrimaryColor"
         android:textSize="@dimen/_35ssp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/imageLogo"
