--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/BackgroundColor"
     tools:context=".loginScreen">
 
     <TextView
@@ -15,7 +16,7 @@
         android:fontFamily="@font/orbitron"
         android:letterSpacing=".1"
         android:text="@string/welcomeText"
-        android:textColor="@color/textColor"
+        android:textColor="@color/HeadingTextColor"
         android:textSize="@dimen/_30ssp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,7 +30,7 @@
         android:layout_marginTop="@dimen/_1sdp"
         android:fontFamily="@font/zenantique"
         android:text="@string/gladText"
-        android:textColor="@color/textColor"
+        android:textColor="@color/SubHeadingTextColor"
         android:textSize="@dimen/_20ssp"
         app:layout_constraintEnd_toEndOf="@+id/welcomeText"
         app:layout_constraintStart_toStartOf="@+id/welcomeText"
@@ -49,8 +50,8 @@
         android:hint="@string/textBoxEmail"
         android:inputType="textEmailAddress"
         android:paddingStart="@dimen/_5sdp"
-        android:textColor="@color/textColor"
-        android:textColorHint="@color/black"
+        android:textColor="@color/ParagraphTextColor"
+        android:textColorHint="@color/SecondaryTextColor"
         app:layout_constraintEnd_toEndOf="@+id/gladText"
         app:layout_constraintStart_toStartOf="@+id/gladText"
         app:layout_constraintTop_toBottomOf="@+id/gladText" />
@@ -71,8 +72,8 @@
         android:hint="@string/textBoxPassword"
         android:inputType="textPassword"
         android:paddingStart="@dimen/_5sdp"
-        android:textColor="@color/textColor"
-        android:textColorHint="@color/black"
+        android:textColor="@color/ParagraphTextColor"
+        android:textColorHint="@color/SecondaryTextColor"
         app:layout_constraintEnd_toEndOf="@+id/editTextEmailAddress"
         app:layout_constraintStart_toStartOf="@+id/editTextEmailAddress"
         app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />
@@ -85,7 +86,7 @@
         android:layout_marginEnd="@dimen/_15sdp"
         android:fontFamily="@font/zenantique"
         android:text="@string/textForgetPassword"
-        android:textColor="@color/textColor"
+        android:textColor="@color/SubHeadingTextColor"
         android:textSize="@dimen/_14ssp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -117,7 +118,7 @@
         android:layout_marginTop="@dimen/_15sdp"
         android:fontFamily="@font/zenantique"
         android:text="@string/orLoginWith"
-        android:textColor="@color/textColor"
+        android:textColor="@color/SubHeadingTextColor"
         android:textSize="@dimen/_16ssp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
@@ -160,7 +161,7 @@
         android:layout_marginTop="@dimen/_20sdp"
         android:fontFamily="@font/zenantique"
         android:text="@string/doNotHaveAccount"
-        android:textColor="@color/textColor"
+        android:textColor="@color/SubHeadingTextColor"
         android:textSize="@dimen/_16ssp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
