--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/BackgroundColor"
     tools:context=".fragment.cartFragment">
 
 
@@ -15,7 +16,7 @@
         android:text="@string/cart"
         android:fontFamily="@font/zenantique"
         android:textSize="@dimen/_20ssp"
-        android:textColor="@color/textColor"
+        android:textColor="@color/HeadingTextColor"
         android:textStyle="bold"
         android:gravity="center"
         android:letterSpacing=".1"
@@ -35,7 +36,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:background="@drawable/proceed"
+        android:background="@drawable/nextbutton"
         android:id="@+id/button2"
         android:layout_width="@dimen/_260sdp"
         android:layout_height="@dimen/_35sdp"
