--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/BackgroundColor"
     tools:context=".fragment.profileFragment">
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -25,7 +26,7 @@
         android:fontFamily="@font/zenantique"
         android:letterSpacing=".1"
         android:text="Ratna Katuwal"
-        android:textColor="@color/textColor"
+        android:textColor="@color/SubHeadingTextColor"
         android:textSize="@dimen/_20ssp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/profileImage"
@@ -39,7 +40,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/zenantique"
         android:text="parbesh456@gmail.com"
-        android:textColor="@color/textColor"
+        android:textColor="@color/SubHeadingTextColor"
         android:textSize="@dimen/_20sdp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/textName"
@@ -55,7 +56,7 @@
         android:fontFamily="@font/zenantique"
         android:letterSpacing=".1"
         android:text="Personal Info:"
-        android:textColor="@color/textColor"
+        android:textColor="@color/SubHeadingTextColor"
         android:textSize="@dimen/_20ssp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -69,7 +70,7 @@
         android:layout_marginTop="@dimen/_3sdp"
         android:fontFamily="@font/zenantique"
         android:text="Name: Ratna Katuwal\nE-mail: parbesh456@gmail.com\nAddress: Gothatar, Kathmandu\nPhone: 9767548680"
-        android:textColor="@color/textColor"
+        android:textColor="@color/ParagraphTextColor"
         android:textSize="@dimen/_14ssp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textPersonalInfo" />
@@ -83,7 +84,7 @@
         android:fontFamily="@font/zenantique"
         android:letterSpacing=".1"
         android:text="Recent View"
-        android:textColor="@color/textColor"
+        android:textColor="@color/SubHeadingTextColor"
         android:textSize="@dimen/_20ssp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -100,8 +101,10 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonEditProfile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/_100sdp"
+        android:layout_height="@dimen/_40sdp"
+        android:background="@drawable/nextbutton"
+        android:textColor="@color/white"
         android:text="Edit Profile"
         app:layout_constraintBottom_toTopOf="@+id/changePasswordButton"
         app:layout_constraintEnd_toStartOf="@+id/buttonLogout"
@@ -110,8 +113,10 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonLogout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/_100sdp"
+        android:layout_height="@dimen/_40sdp"
+        android:background="@drawable/nextbutton"
+        android:textColor="@color/white"
         android:text="Logout"
         app:layout_constraintBottom_toBottomOf="@+id/buttonEditProfile"
         app:layout_constraintEnd_toEndOf="parent"
@@ -121,8 +126,10 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/changePasswordButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/_180sdp"
+        android:layout_height="@dimen/_40sdp"
+        android:background="@drawable/nextbutton"
+        android:textColor="@color/white"
         android:text="Change Password"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
