--- a/app/src/main/res/layout/my_order_item.xml
+++ b/app/src/main/res/layout/my_order_item.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/BackgroundColor"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -35,7 +36,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_11sdp"
                 android:text="Food Name"
-                android:textColor="@color/textColor"
+                android:textColor="@color/ParagraphTextColor"
                 android:fontFamily="@font/zenantique"
                 android:textSize="@dimen/_18ssp"
                 app:layout_constraintBottom_toTopOf="@+id/foodQuantity"
@@ -48,7 +49,7 @@
                 android:layout_height="wrap_content"
                 android:text="Qty: 3"
                 android:fontFamily="@font/zenantique"
-                android:textColor="@color/textColor"
+                android:textColor="@color/ParagraphTextColor"
                 android:textSize="@dimen/_14ssp"
                 android:layout_marginStart="@dimen/_11sdp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -61,7 +62,7 @@
                 android:layout_height="wrap_content"
                 android:text="Rs. 500"
                 android:layout_marginEnd="@dimen/_11sdp"
-                android:textColor="@color/textColor"
+                android:textColor="@color/ParagraphTextColor"
                 android:fontFamily="@font/zenantique"
                 android:textSize="@dimen/_14ssp"
                 app:layout_constraintBottom_toBottomOf="parent"
