--- a/app/src/main/res/layout/popular_item.xml
+++ b/app/src/main/res/layout/popular_item.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/BackgroundColor"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -35,7 +36,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_11sdp"
                 android:text="Food Name"
-                android:textColor="@color/textColor"
+                android:textColor="@color/ParagraphTextColor"
                 android:fontFamily="@font/zenantique"
                 android:textSize="@dimen/_18ssp"
                 app:layout_constraintBottom_toBottomOf="@+id/foodImage"
@@ -49,7 +50,7 @@
                 android:layout_marginTop="@dimen/_20sdp"
                 android:text="@string/rs500"
                 android:textSize="@dimen/_14ssp"
-                android:textColor="@color/textColor"
+                android:textColor="@color/ParagraphTextColor"
                 android:fontFamily="@font/zenantique"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.588"
