--- a/app/src/main/res/drawable/delete.xml
+++ b/app/src/main/res/drawable/delete.xml
@@ -1,6 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="35dp"
-    android:height="35dp"
+    android:width="@dimen/_20sdp"
+    android:height="@dimen/_20sdp"
     android:viewportWidth="24"
     android:viewportHeight="24">
 
