--- a/app/src/main/res/drawable/person.xml
+++ b/app/src/main/res/drawable/person.xml
@@ -1,6 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="20dp"
-    android:height="20dp"
+    android:width="@dimen/_20sdp"
+    android:height="@dimen/_20sdp"
     android:viewportWidth="64"
     android:viewportHeight="64">
 
