--- a/app/src/main/res/drawable/user.xml
+++ b/app/src/main/res/drawable/user.xml
@@ -6,7 +6,15 @@
 
     <path
         android:fillColor="#00000000"
-        android:pathData="M15.795,15.811L21,21M18,10.5C18,14.642 14.642,18 10.5,18C6.358,18 3,14.642 3,10.5C3,6.358 6.358,3 10.5,3C14.642,3 18,6.358 18,10.5Z"
+        android:pathData="M16,7C16,9.209 14.209,11 12,11C9.791,11 8,9.209 8,7C8,4.791 9.791,3 12,3C14.209,3 16,4.791 16,7Z"
+        android:strokeWidth="2"
+        android:strokeColor="#000000"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round" />
+
+    <path
+        android:fillColor="#00000000"
+        android:pathData="M12,14C8.134,14 5,17.134 5,21H19C19,17.134 15.866,14 12,14Z"
         android:strokeWidth="2"
         android:strokeColor="#000000"
         android:strokeLineCap="round"
